--- a/assets/sass/_tabs.sass
+++ b/assets/sass/_tabs.sass
@@ -46,10 +46,10 @@
 		position: absolute
 		background-color: $fontColor
 		color: $mainBg
-		transition: all .3s ease-out;
+		transition: all .3s ease-out
 		top: 100%
 		left: 0
 	&:hover > .tab__hidden
 		top: 0
 	&__title
-    border-bottom: 2px solid #c7d5e0
+		border-bottom: 2px solid #c7d5e0
