--- a/assets/sass/_main.sass
+++ b/assets/sass/_main.sass
@@ -1,5 +1,5 @@
 *
-	box-sizing: border-box;
+	box-sizing: border-box
 
 body, html, #__nuxt, #__layout, #__layout > div:first-child, ul
 	margin: 0
@@ -13,27 +13,37 @@ p
 ul
 	list-style: none
 
-
 .main-wrapper
 	width: 100%
 	height: 100%
-	// background-color: $mainBg;
+	// background-color: $mainBg
 	display: -webkit-flex
 	display: -moz-flex
 	display: -ms-flex
 	display: -o-flex
 	display: flex
 	align-items: flex-start
-	background: #141E30;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	& > *
+	background: #141E30 /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #243B55, #141E30) /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #243B55, #141E30) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+.containersWrapper
+	display: flex
+	align-items: flex-start
+	height: 100%
+
+	.left, .right
 		flex-basis: 50%
+
+	.right
+		height: 100%
+		width: 100%
+
 
 .left
 	padding: 20px
 	height: 100%
 	@media(max-width: 900px)
-    flex-basis: 100%
-    padding: 0
-    height: auto
+		flex-basis: 100%
+		padding: 0
+		height: auto
