--- a/assets/sass/_main-info.sass
+++ b/assets/sass/_main-info.sass
@@ -3,41 +3,39 @@
   padding-bottom: 0
   box-sizing: border-box
   max-height: 350px
-  /* max-width: 350px */
   box-shadow: $shadow
   padding: 10px
   max-width: 800px
   @media(max-width: 900px)
     max-width: 100%
-    max-height: none
     font-size: 12px !important
   @media only screen and (max-width: 320px)
     max-height: 250px
     overflow: scroll
   &__my-info
-    display: -webkit-flex
-    display: -moz-flex
-    display: -ms-flex
-    display: -o-flex
     display: flex
     align-items: flex-start
-    // font-size: 16px
     color: $fontColor
+    height: 100%
+    max-height: 300px
     & > *:last-child
       margin-left: 15px
+    @media(max-width: 900px)
+      font-size: 20px
   &__me
+    overflow: auto
+    max-height: 100%
     p
       margin-bottom: 10px
   &__photo
     padding: 5px
     border: 1px dashed $fontColor
-    max-height: 500px
-    max-width: 500px
+    height: 300px
+    width: 300px
+
     img
-      height: auto
-      width: 100%
-      max-height: 500px
-      max-width: 500px
+      height: 100%
+      width: auto
   &__contacts
     margin-top: 20px
     font-size: 16px
